dealing with missing values

--- a/exercise-introduction.ipynb
+++ b/exercise-introduction.ipynb
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-08T15:07:22.439813Z",
@@ -457,7 +457,7 @@
     "# Save predictions in format used for competition scoring\n",
     "output = pd.DataFrame({'Id': X_test.index,\n",
     "                       'SalePrice': preds_test})\n",
-    "output.to_csv('./output/submission.csv', index=False)"
+    "output.to_csv('./output/submission-introduction.csv', index=False)"
    ]
   },
   {
